Added more authors

--- a/authors.txt
+++ b/authors.txt
@@ -303,3 +303,10 @@ yavo = Yavor Shahpasov <yavo@php.net>
 yunosh = Jan Schneider <yunosh@php.net>
 zimt = Peter Petermann <zimt@php.net>
 zyprexia = Dave Mertens <zyprexia@php.net>
+mfp = Matthew Peters <mfp@php.net>
+cem = Caroline Maynard <cem@php.net>
+gcc = Graham Charters <gcc@php.net>
+ansriniv = Anantoju Veera Srinivas <ansriniv@php.net>
+slaws = Simon Laws <slaws@php.net>
+jimw = Jim W <jimw@php.net>
+dams = Damien_Seguy <dams@php.net>
