--- a/authors.txt
+++ b/authors.txt
@@ -310,3 +310,4 @@ ansriniv = Anantoju Veera Srinivas <ansriniv@php.net>
 slaws = Simon Laws <slaws@php.net>
 jimw = Jim W <jimw@php.net>
 dams = Damien_Seguy <dams@php.net>
+wez = Wez Furlong <wez@php.net>
