Removed nick from my realname

--- a/authors.txt
+++ b/authors.txt
@@ -181,7 +181,7 @@ markonen = Marko Karppinen <markonen@php.net>
 matthias = Matthias Englert <matthias@php.net>
 mbretter = Michael Bretterklieber <mbretter@php.net>
 mccain = ?? McCain <mccain@php.net>
-meebey = Mirco 'meebey' Bauer <meebey@php.net>
+meebey = Mirco Bauer <meebey@php.net>
 mehl = Michael P. Mehl <mehl@php.net>
 mekras = Mikhail Krasilnikov <mekras@php.net>
 mfischer = Markus Fischer <mfischer@php.net>
