--- a/authors.txt
+++ b/authors.txt
@@ -312,3 +312,4 @@ jimw = Jim W <jimw@php.net>
 dams = Damien_Seguy <dams@php.net>
 wez = Wez Furlong <wez@php.net>
 ivonascimento = Ivo Nascimento <iannsp@gmail.com>
+janpascal = Jan-Pascal van Best <janpascal@php.net>
