add missing authors for pear-core

--- a/authors.txt
+++ b/authors.txt
@@ -4,6 +4,7 @@ afz = Ali Fazelzadeh <afz@php.net>
 aharvey = Adam Harvey <aharvey@php.net>
 ahayes = Alex Hayes <ahayes@php.net>
 aidan = Aidan Lister <aidan@php.net>
+aj = Anders Johannsen <anders@ignition.dk>
 alan_k = Alan Knowles <alan_k@php.net>
 alec = Aleksander Machniak <alec@php.net>
 alexios = Alexios Fakos <alexios@php.net>
@@ -23,6 +24,7 @@ ashnazg = Chuck Burgess <ashnazg@php.net>
 asnagy = Andrew Nagy <asnagy@php.net>
 atex = Andrew Teixeira <atex@php.net>
 avb = Alexey Borzov <avb@php.net>
+avsm = Anil Madhavapeddy <anil@recoil.org>
 aztek = John Downey <aztek@php.net>
 baba = Baba Buehler <baba@php.net>
 badams = Byron Adams <badams@php.net>
@@ -125,6 +127,7 @@ hudeldudel = Sebastian Ebling <hudeldudel@php.net>
 hugoki = Elmar Pitschke <hugoki@php.net>
 ieure = Ian Eure <ieure@php.net>
 ifeghali = Igor Feghali <ifeghali@php.net>
+iliaa = Ilia Alshanetsky <ilia@prohost.org>
 imajes = James Cox <imajes@php.net>
 instance = Alan Langford <instance@php.net>
 irokez = Alexander Pak <irokez@php.net>
@@ -147,6 +150,7 @@ jmcastagnetto = Jesus M. Castagnetto <jmcastagnetto@php.net>
 johannes = Johannes Schlüter <johannes@php.net>
 jon = Jon Parise <jon@php.net>
 jpm = Joao Prado Maia <jpm@php.net>
+jlp = James L. Pine <jlp@valinux.com>
 jrust = Jason Rust <jrust@php.net>
 jschippers = Jorrit Schippers <jschippers@php.net>
 jstump = Joe Stump <jstump@php.net>
@@ -295,11 +299,13 @@ vincentlascaux = Vincent Lascaux <vincentlascaux@php.net>
 walter = Walter Hop <walter@php.net>
 wenz = Christian Wenz <wenz@php.net>
 wiesemann = Mark Wiesemann <wiesemann@php.net>
-wormus = Aaron <wormus@php.net>
+wormus = Aaron Wormus <wormus@php.net>
+wsanchez = Wilfredo Sanchez <wsanchez@mit.edu>
 wudicgi = Wudi Liu <wudicgi@php.net>
 xnoguer = Xavier Noguer Gallego <xnoguer@php.net>
 xolphin = Maarten Bremer <xolphin@php.net>
 yavo = Yavor Shahpasov <yavo@php.net>
+yohgaki = Yasuo Ohgaki <yohgaki@ohgaki.net>
 yunosh = Jan Schneider <yunosh@php.net>
 zimt = Peter Petermann <zimt@php.net>
 zyprexia = Dave Mertens <zyprexia@php.net>
